@@ -28,6 +28,7 @@
 - P4A_DB_Navigator now can work also without recursor (flat list is shown)
 - P4A_Mask::displayText() method was marked as deprecated, you can now use
   P4A_Mask::display() that now has no hardcoded object reference
+- P4A_Data_Source::isFirstRow() and isLastRow() methods were added
 
 3.2.2
 - P4A_Table's image cols are now centered horizontally
